# ped-research-01-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/core/: config.py  hash_table.py  security.py
app/modules/: __init__.py
app/modules/inventory/: controller.py  routes.py  schemas.py  service.py
app/modules/system/: __init__.py  controller.py  routes.py  schemas.py  service.py
app/shared/: __init__.py  schemas.py
app/utils/: logger.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  HASH_TABLE.md  QUICKSTART.md  README.md
scripts/: template_cli.py
static/: index.html
tests/: test_api.py
